Human vs human and some design set up.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="main">
         <div class="menu">
             <div id="menubtn1" class="menubtn">Settings</div>
-            <div id="menubtn2" class="menubtn">Board</div>
+            <div id="menubtn2" class="menubtn">Game</div>
             <div id="menubtn3" class="menubtn">Results</div>
         </div>
         <div class="display">
@@ -24,45 +24,45 @@
                 <div class="column">
                     <div class="displaytxt">Player 1</div>
                         <div class="row">
-                            <input type="radio" name="p1radio" id="xhuman" checked="true">
+                            <input type="radio" name="p1radio" value="human" checked="true">
                             <label for="xhuman"> Human</label>
                         </div>
                         <div class="row">
-                            <input type="radio" name="p1radio" id="xaidumb">
+                            <input type="radio" name="p1radio" value="aidumb">
                             <label for="xaidumb"> AI (dumb)</label>
                         </div>
                         <div class="row">
-                            <input type="radio" name="p1radio" id="xaismart">
+                            <input type="radio" name="p1radio" value="aismart">
                             <label for="xaisamrt"> AI (smart)</label>
                         </div>
                 </div>
                 <div class="column">
                     <div class="displaytxt">Player 2</div>
                         <div class="row">
-                            <input type="radio" name="p2radio" id="ohuman" checked="true">
+                            <input type="radio" name="p2radio" value="human" checked="true">
                             <label for="ohuman">Human</label>
                         </div>
                         <div class="row">
-                            <input type="radio" name="p2radio" id="oaidumb">
+                            <input type="radio" name="p2radio" value="aidumb">
                             <label for="oaidumb">AI (dumb)</label>
                         </div>
                         <div class="row">
-                            <input type="radio" name="p2radio" id="oaismart">
+                            <input type="radio" name="p2radio" value="aismart">
                             <label for="oaismart">AI (smart)</label>
                         </div>
                 </div>
             </div>
             <div id="menudisplay2" class="menudisplay">
                 <div id="boardDisplay">
+                    <div id="boardTile00"></div>
+                    <div id="boardTile01"></div>
+                    <div id="boardTile02"></div>
+                    <div id="boardTile10"></div>
                     <div id="boardTile11"></div>
                     <div id="boardTile12"></div>
-                    <div id="boardTile13"></div>
+                    <div id="boardTile20"></div>
                     <div id="boardTile21"></div>
                     <div id="boardTile22"></div>
-                    <div id="boardTile23"></div>
-                    <div id="boardTile31"></div>
-                    <div id="boardTile32"></div>
-                    <div id="boardTile33"></div>
                 </div>
             </div>
             <div id="menudisplay3" class="menudisplay">
