--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="images/tic-tac-toe-hand-drawn-game.png">
     <title>Tic Tac Toe</title>
     <script src="theme.js"></script>
 </head>
